--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "1.7.11"
+    "electron": "^2.0.2"
   }
 }
